fixing not showing testimonials

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,13 +228,14 @@ header {
   transform: scale(1.2);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", sans-serif;
-  display: flex;
-  flex-flow: column nowrap;
-  height: 100vh;
 }
 
 .about {
